# lotus-lamp-python

./: CHANGELOG.md  CONFIGURATION.md  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  TESTING.md  lotus_lamp_config.example.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
docs/: MODES.md  PROTOCOL.md
examples/: README.md  __init__.py  animation.py  browser.py  discover_and_configure.py  discover_uuids.py  multi_device.py  timer.py
lotus_lamp/: __init__.py  __main__.py  advanced_scanner.py  config.py  controller.py  modes.py  scanner.py  setup.py
lotus_lamp/data/: mode_categories.json  mode_names.json
tests/: __init__.py  conftest.py  test_advanced_scanner.py  test_config.py  test_controller.py  test_modes.py  test_scanner.py
